<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo"
    android:orientation="vertical"
    tools:context=".FirstActivity">
    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ads_id" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:fontFamily="cursive"
                android:text="@string/Logo_Name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/add_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="340dp"
                android:background="@drawable/add"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <Button
                android:id="@+id/category_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/category"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/add_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_btn"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/share_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="128dp"
                android:background="@drawable/share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/rate_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="128dp"
                android:background="@drawable/rate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/Add"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/add_btn"
                app:layout_constraintStart_toStartOf="@+id/add_btn"
                app:layout_constraintTop_toBottomOf="@+id/add_btn" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quotes"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/category_btn"
                app:layout_constraintStart_toStartOf="@+id/category_btn"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/Share"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/share_btn"
                app:layout_constraintStart_toStartOf="@+id/share_btn"
                app:layout_constraintTop_toBottomOf="@+id/share_btn" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="81dp"
                android:text="@string/Privacy"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/privecy_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/privecy_btn" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rate"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="@+id/rate_btn"
                app:layout_constraintStart_toStartOf="@+id/rate_btn"
                app:layout_constraintTop_toTopOf="@+id/textView9" />


            <Button
                android:id="@+id/privecy_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/privacy"
                app:layout_constraintBottom_toBottomOf="@+id/share_btn"
                app:layout_constraintEnd_toStartOf="@+id/rate_btn"
                app:layout_constraintStart_toEndOf="@+id/share_btn"
                app:layout_constraintTop_toTopOf="@+id/rate_btn" />

            <Button
                android:id="@+id/book_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/book"
                app:layout_constraintBottom_toBottomOf="@+id/add_btn"
                app:layout_constraintEnd_toStartOf="@+id/category_btn"
                app:layout_constraintStart_toEndOf="@+id/add_btn"
                app:layout_constraintTop_toTopOf="@+id/category_btn" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bookmarks"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/book_btn"
                app:layout_constraintVertical_bias="0.091" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-80dp"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ads_id" />
</LinearLayout>